main - edit category, add main content

--- a/Vampa/.classpath
+++ b/Vampa/.classpath
@@ -35,5 +35,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/sts-bundle/sts-3.9.9.RELEASE/lombok.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
